WIP: Move ModelStatement.argument()
We are duplicating information between Declared and Effective
statements. Eliminate this duplication by having DeclaredStatement
expose only a String.

Change-Id: I70400e60cf2bdaadadb4e976a3dc3ad186ccb94b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>